src/snapshots/afrotd__parser__tests__interpretation_3.5.3_10.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 5
  - 3
index: 10
text: "1. und 10 von der B25. Team A snappt den Ball mit 12 Sekunden verbleibender Spielzeit in der vierten Spielperiode. QB A12 kann\nkeinen freien Receiver finden. Er verlässt die Tackle Box, advanct zehn\nMeter und wird inbounds getackelt. Die Game Clock bleibt bei 0:05 stehen. Bei der Defense nahmen 12 Spieler am Play teil."
ruling: "Foul\ndurch Team B für einen Auswechselfehler. Es besteht keine Verpflichtung, die Strafe zu akzeptieren, damit die Game Clock zurückgesetzt\nwerden kann. Team A kann die 5-Meterstrafe ablehnen und die Game\nClock auf 12 Sekunden zurückstellen lassen. Die Game Clock startet\ndann mit dem nächsten Snap."
