src/snapshots/afrotd__parser__tests__interpretation_3.5.3_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 5
  - 3
index: 2
text: "3. und 5 von der B-35. Es befinden sich 12 Team B Spieler in\nder Formation auf dem Feld und keiner dieser Spieler versucht, das\nFeld zu verlassen, während der Ball spielbereit ist. Team A snappt und\nA44 erzielt 3 Meter Raumgewinn."
ruling: "Live Ball Foul. Team A, 1.\nund 10 von der B-30."
