src/snapshots/afrotd__parser__tests__interpretation_3.5.3_3.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 5
  - 3
index: 3
text: "Team A befindet sich mit elf Spielern im Huddle, als sich A27\ndem Huddle nähert (innerhalb von 10 Metern), während dieses sich\nauflöst."
ruling: "Dead Ball Foul. Strafe – 5 Meter vom Succeeding\nSpot (Regel 2.27.9.a)."
