src/snapshots/afrotd__parser__tests__interpretation_3.5.3_5.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 3
  - 5
  - 3
index: 5
text: "Team A hat sich zu einem Fieldgoalversuch aufgestellt und Team\nB hat 11 Spieler auf dem Spielfeld. Unmittelbar bevor der Snap erfolgt, läuft ein zwölfter Team B-Spieler auf das Spielfeld. Der Ball wird\ngesnappt, und der Kicker führt den Kick durch."
ruling: "Live Ball\nFoul. 5-Meterstrafe, Previous Spot oder Team A kann das Ergebnis des\nDowns akzeptieren."
