src/snapshots/afrotd__parser__tests__interpretation_4.1.2_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 4
  - 1
  - 2
index: 2
text: "4. und 15 von der A-30, Team A puntet. B44 befindet sich in Position zum Fangen des Kicks. Bei dem Versuch, den Kick zu fangen,\nmufft B44 den Kick an der B-35. Während der Ball nach der Berührung\nauf dem Boden rollt, pfeift der Backjudge irrtümlich ab. Der Ball wird unter einem Stapel liegender Spieler begraben. Während des Kicks hielt\nB22 einen Gegner fest und es liegt eine Flagge auf dem Spielfeld."
ruling: "Irrtümliches Abpfeifen. Regel 4.1.2.b.3.c trifft nicht zu, da es\nkeine klar sichtbare Recovery des Balls gab. Der Ball wird zum Previous\nSpot zurückgebracht und die 10-Meterstrafe für das illegale Halten wird\ndurchgeführt. Team A bleibt in Ballbesitz, 1. und 10 von der A-40."
